--- a/crud_nodejs/views/index.ejs
+++ b/crud_nodejs/views/index.ejs
@@ -1,61 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<html lang="es">
 
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
-      crossorigin="anonymous"
-    />
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Boxicons CSS -->
-    <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
-    <title>CRUD NODEJS</title>
-  </head>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
 
-  <body>
-    <nav class="navbar navbar-light bg-light">
-      <div class="container">
-        <a class="navbar-brand" href="#">
-          <img
-            src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Node.js_logo_2015.svg/1280px-Node.js_logo_2015.svg.png"
-            alt=""
-            width="90"
-            height="24"
-            class="d-inline-block align-text-top"
-          />
-          CRUD NODEJS - MYSQL - EJS
-        </a>
-      </div>
-    </nav>
+  <!-- Boxicons CSS -->
+  <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
+  <title>CRUD NODEJS</title>
+</head>
 
+<body>
+  <nav class="navbar navbar-light bg-light">
     <div class="container">
-      <a href="/create" class="btn btn-outnline-primary mt-4 mb-4">Nuevo</a>
-
-      <table class="table table-striped">
-        <thead>
-          <tr class="bg-primary text-white">
-            <th scope="col">ID</th>
-            <th scope="col">USUARIO</th>
-            <th scope="col">ROL</th>
-            <th scope="col">ACCIONES</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
+      <a class="navbar-brand" href="#">
+        <img
+          src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Node.js_logo_2015.svg/1280px-Node.js_logo_2015.svg.png"
+          alt="" width="90" height="24" class="d-inline-block align-text-top" />
+        CRUD NODEJS - MYSQL - EJS
+      </a>
     </div>
+  </nav>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-      crossorigin="anonymous"
-    ></script>
+  <div class="container">
+    <a href="/create" class="btn btn-outline-primary mt-4 mb-4"><i class="bx bx-plus-circle"></i> Nuevo</a>
 
-    <script src="https://unpkg.com/boxicons@latest/dist/boxicons.js"></script>
-  </body>
+    <table class="table table-striped table-hove">
+      <thead>
+        <tr class="bg-primary text-white">
+          <th scope="col">ID</th>
+          <th scope="col">USUARIO</th>
+          <th scope="col">ROL</th>
+          <th scope="col">ACCIONES</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% results.forEach((users)=>{ %>
+          <tr>
+            <td>
+              <%= users.id %>
+            </td>
+            <td>
+              <%= users.user %>
+            </td>
+            <td>
+              <%= users.rol %>
+            </td>
+            <td>
+              <a href="/edit" class="btn btn-outline-warning">Edit</a>
+              <a type="button" href="/delete" class="btn btn-outline-danger">Delete</a>
+            </td>
+          </tr>
+          <% }) %>
+      </tbody>
+    </table>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+    crossorigin="anonymous"></script>
+
+  <script src="https://unpkg.com/boxicons@latest/dist/boxicons.js"></script>
+</body>
+
 </html>
