--- a/crud-students-golang/form/Menu.tmpl
+++ b/crud-students-golang/form/Menu.tmpl
@@ -1,4 +1,4 @@
-{{Definir "Menú" }}
- < a href = "/" > INICIO < / a >  |  
-< A href = "/ nuevo" > NEW < / una > 
-{{end}}
+{{ define "Menu" }}
+    <a href="/">HOME</a> | 
+    <a href="/new">NEW</a>
+{{ end }}
