--- a/crud-students-golang/form/Show.tmpl
+++ b/crud-students-golang/form/Show.tmpl
@@ -1,8 +1,8 @@
-{{definir "Mostrar" }}
-  {{plantilla "Encabezado" }}
-    {{template "Menu"   }}
-     < h2 > Registrarse {{.Id}} < / h2 > 
-      < p > Nombre: {{.Name}} < / p > 
-      < p > Ciudad: {{.City}} < / p > < br / >  < a href = "/ editar? id = {{}} .ID" > Editar < / a > < / p > 
-  {{plantilla "pie de página" }}
-{{ fin }}
+{{ define "Show" }}
+  {{ template "Header" }}
+    {{ template "Menu"  }}
+    <h2> Register {{ .Id }} </h2>
+      <p>Name: {{ .Name }}</p>
+      <p>City:  {{ .City }}</p><br /> <a href="/edit?id={{ .Id }}">Edit</a></p>
+  {{ template "Footer" }}
+{{ end }}
