--- a/crud-students-golang/form/Edit.tmpl
+++ b/crud-students-golang/form/Edit.tmpl
@@ -1,12 +1,12 @@
-{{definir "Editar" }}
-  {{plantilla "Encabezado" }}
-    {{template "Menu" }} 
-    < h2 > Editar nombre y ciudad < / h2 >   
-    < form method = "POST" action = "update" > 
-      < input  type = "hidden" name = "uid" value = "{{. Id}} "  / > 
-      < etiqueta > Nombre < / etiqueta > < input  type = " text "nombre = "nombre"valor = "{{}} .Nombre"   / > < br / > 
-      < etiqueta > Ciudad < / etiqueta > < entrada de  tipo = "texto" nombre = "ciudad" valor = "{{}} .City"   / > < br / > 
-      < input  type = "submit" value = "Guardar usuario"  / > 
-    < / form > <br / >    
-  {{plantilla "Pie de página" }}
-{{ fin }}
+{{ define "Edit" }}
+  {{ template "Header" }}
+    {{ template "Menu" }} 
+   <h2>Edit Name and City</h2>  
+    <form method="POST" action="update">
+      <input type="hidden" name="uid" value="{{ .Id }}" />
+      <label> Name </label><input type="text" name="name" value="{{ .Name }}"  /><br />
+      <label> City </label><input type="text" name="city" value="{{ .City }}"  /><br />
+      <input type="submit" value="Save user" />
+    </form><br />    
+  {{ template "Footer" }}
+{{ end }}
