--- a/crud-students-golang/form/Header.tmpl
+++ b/crud-students-golang/form/Header.tmpl
@@ -1,10 +1,12 @@
-{{define "Header" }}
- < ! DOCTYPE html > 
-< html lang = "en-US" > 
-    < head > 
-        < title > Ejemplo de cuajada Golang Mysql < / title > 
-        < meta charset = "UTF-8"  / > 
-    < / head > 
-    < body > 
-        < h1 > Ejemplo de cuajada Golang Mysql < / h1 >    
-{{end}}
+
+
+{{ define "Header" }}
+<!DOCTYPE html>
+<html lang="en-US">
+    <head>
+        <title>Golang Mysql Curd Example</title>
+        <meta charset="UTF-8" />
+    </head>
+    <body>
+        <h1>Golang Mysql Curd Example</h1>   
+{{ end }}
