--- a/DemosXF/DemosXF/MainPage.xaml
+++ b/DemosXF/DemosXF/MainPage.xaml
@@ -1,14 +1,32 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:DemosXF"
              x:Class="DemosXF.MainPage">
 
-    <StackLayout>
-        <!-- Place new controls here -->
-        <Label Text="Welcome to Xamarin.Forms!" 
-           HorizontalOptions="Center"
-           VerticalOptions="CenterAndExpand" />
+    <StackLayout  HorizontalOptions="Center" 
+                  VerticalOptions="Center" >
+        <Label Text="Xamarin App" 
+            FontSize="45"
+            HorizontalOptions="Center"
+            VerticalOptions="StartAndExpand" />
+
+        <ImageButton Source="XamarinLogo.png"
+             HorizontalOptions="Center"
+             VerticalOptions="CenterAndExpand" />
+
+        <Label Text="Name" TextColor="Black"/>
+        <Editor Placeholder="Name"/>
+        
+        <Label Text="Password" TextColor="Black"/>
+        <Editor Placeholder="Password"
+               />
+
+        <Button Text="Login" 
+                FontSize="15" 
+                BackgroundColor="Blue" 
+                TextColor="White"
+                />
+
     </StackLayout>
 
 </ContentPage>
